git remote add origin https://github.com/AlonC1997/Book-store.git git branch -M main git push -u origin main